# Genetic_Algorithm_Python

./: .gitignore  LICENSE  README.md  setup.cfg
genalgopy/: _keras.py  chooser.py  genetic.py  rules.py  simple_nn.py  track.py
genetic_algorithm/: chooser.py  genetic.py  rules.py  track.py
