[metadata]
name = genetic_algorithm
version = 1.0.0
author = MrPoisen
description = This package implements various classes and functions for genetic algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrPoisen/Genetic_Algorithm_Python
project_urls =
    Bug Tracker = https://github.com/pypa/Genetic_Algorithm_Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6